--- a/.github/workflows/GitHub-activity.yml
+++ b/.github/workflows/GitHub-activity.yml
@@ -1,8 +1,8 @@
-name: GitHub - Activity - Readme
+name: GitHub Activity
 
 on:
   schedule:
-    - cron: '1 * * * *'
+    - cron: '30 * * * *'
 
 jobs:
   build:
@@ -10,6 +10,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: jamesgeorge007/github-activity-readme@v0.3.1
+      - uses: jamesgeorge007/github-activity-readme@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
